--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,12 +14,15 @@
       <%= link_to 'Home', root_path %>
 
       <% if @current_user.present? %>
+        <% if @current_user.admin? %>
+          <%= link_to 'All Users', users_path %>
+        <% end %>
         <%= link_to "Log out #{@current_user.email}", login_path, :method => 'delete' %>
+      <% else %>
 
         <%= link_to 'Sign up', new_user_path %>   
         <%= link_to 'Sign in', login_path %>
       <% end %>
-
     </nav>
     <%= yield %>
   </body>
