--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,12 +17,15 @@
         <% if @current_user.admin? %>
           <%= link_to 'All Users', users_path %>
         <% end %>
-        <%= link_to "Log out #{@current_user.email}", login_path, :method => 'delete' %>
+        <%= link_to 'New Task List', new_todo_list_path %>
+        <%= link_to 'To Do List', todo_lists_path	 %>
+        <%= link_to "Log out", login_path, :method => 'delete' %>
+        You are logged in as: <%= @current_user.email %>
       <% else %>
 
-        <%= link_to 'Sign up', new_user_path %>   
         <%= link_to 'Sign in', login_path %>
-      <% end %>
+        <%= link_to 'Sign up', new_user_path %>   
+      <% end %> 
 
     </nav>
     
