--- a/app/views/todo_lists/new.html.erb
+++ b/app/views/todo_lists/new.html.erb
@@ -1,9 +1,9 @@
 <h1>TodoList#new</h1>
 <%= form_for @list do |f| %>
-  <%= f.label :title %>
+ <strong><%= f.label :title %></strong>
   <%= f.text_field :title %>
 
-  <%= f.label :description %>
+  <strong><%= f.label :description %></strong>
   <%= f.text_field :description %>
 
   <%= f.submit 'Create' %>
