--- a/app/views/todo_lists/new.html.erb
+++ b/app/views/todo_lists/new.html.erb
@@ -1,4 +1,4 @@
-<h1>TodoList#new</h1>
+<h1>New Todo-List</h1>
 <%= form_for @list do |f| %>
  <strong><%= f.label :title %></strong>
   <%= f.text_field :title %>
