--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,7 +4,7 @@
     <title>To Do List</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
-
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/kognise/water.css@latest/dist/dark.min.css">
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
@@ -17,8 +17,8 @@
         <% if @current_user.admin? %>
           <%= link_to 'All Users', users_path %>
         <% end %>
-        <%= link_to 'New Task List', new_todo_list_path %>
-        <%= link_to 'To Do List', todo_lists_path	 %>
+        <%= link_to 'New To-Do List', new_todo_list_path %>
+        <%= link_to 'To-Do Lists', todo_lists_path	 %>
         <%= link_to "Log out", login_path, :method => 'delete' %>
         You are logged in as: <%= @current_user.email %>
       <% else %>
