--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,2 @@
 <h1>Home Page</h1>
-<p>EDIT THIS</p>
+<h5>This is your personal To-Do List. You can create, edit and delete any of your tasks / To-Do-lists </h5>
