--- a/app/views/tasks/new.html.erb
+++ b/app/views/tasks/new.html.erb
@@ -1,6 +1,6 @@
 <h1>New Task</h1>
 <%= form_for @task do |t| %>
-  <!-- Add listId to form -->
+  <%= t.hidden_field :list_id, :value => @list.id %>
   <%= t.label :Task %>
   <%= t.text_field :name %>
   <%= t.submit 'Create' %>
