--- a/app/views/todo_lists/index.html.erb
+++ b/app/views/todo_lists/index.html.erb
@@ -11,11 +11,13 @@
     </row>
   </div>
   <% l.tasks.each do |t| %>
-    <row>
+    <% if t.complete? %>
+      <strike style="opacity: 0.4;"><%= t.name %></strike>
+    <% else %>
       <%= t.name %>
-      <%= link_to 'Complete', {:controller => "tasks", :action => "complete", :id => t.id }, :method => 'post' %>
-      <br>
-    </row>
+    <% end %>
+    <%= link_to 'Complete', {:controller => "tasks", :action => "complete", :id => t.id }, :method => 'post' %>
+    <br>
   <% end %>
   <div class="controls">
     <%= link_to 'Edit', edit_todo_list_path(l) %> |
