--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -1,7 +1,12 @@
+.container {
+}
+
+body {
+  background-color: black;
+}
+
 nav {
-  background-color: rgb(1, 1, 16);
-  overflow: hidden;
-  margin-bottom: 15px;
+  background-color: white;
 }
 
 nav a {
@@ -11,6 +16,7 @@ nav a {
   padding: 14px 16px;
   text-decoration: none;
   font-size: 17px;
+  margin-top: 195px;
 }
 
 nav a:hover {
@@ -22,13 +28,25 @@ nav a.active {
   color: white;
 }
 
-.todo-list {
-  text-decoration: underline;
-  font-size: 19px;
+.table > div {
+  outline: 2px double black;
+  margin-top: 2rem;
+  box-shadow: 5px;
+  box-shadow: inset 0 0 10px #000000;
 }
 
-.table > div {
-  outline: 2px solid black;
-  margin: 1rem 0;
-  box-shadow: 5px 10px;
+#particles-js {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+}
+
+.todo-list {
+  font-size: 19px;
+  color: black;
+}
+
+.todo-list-center {
+  margin-top: 0 px;
+  background-color: white;
 }
