--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -1,6 +1,3 @@
-.container {
-}
-
 body {
   background-color: black;
 }
@@ -16,7 +13,7 @@ nav a {
   padding: 14px 16px;
   text-decoration: none;
   font-size: 17px;
-  margin-top: 195px;
+  margin-top: 180px;
 }
 
 nav a:hover {
@@ -29,10 +26,7 @@ nav a.active {
 }
 
 .table > div {
-  outline: 2px double black;
-  margin-top: 2rem;
-  box-shadow: 5px;
-  box-shadow: inset 0 0 10px #000000;
+  margin-top: 3rem;
 }
 
 #particles-js {
@@ -44,9 +38,70 @@ nav a.active {
 .todo-list {
   font-size: 19px;
   color: black;
+  text-decoration: underline;
 }
 
 .todo-list-center {
-  margin-top: 0 px;
+  margin-top: 1rem;
   background-color: white;
+  opacity: 0.8;
+}
+
+.bottom-buttons {
+  margin-top: 2rem;
+  height: 40px;
+}
+
+footer {
+  margin-top: 4rem;
+}
+
+.btn:not(:disabled):not(.disabled) {
+  display: inline-block;
+  height: 30px;
+  /* padding: 0 30px; */
+  color: black;
+  text-align: center;
+  font-size: 11px;
+  font-weight: 600;
+  line-height: 20px;
+  letter-spacing: 0.1rem;
+  text-transform: uppercase;
+  text-decoration: none;
+  white-space: nowrap;
+  background-color: transparent;
+  border-radius: 4px;
+  border: 1px solid #bbb;
+  cursor: pointer;
+  box-sizing: border-box;
+  /* margin-top: 1rem; */
+}
+
+h1 {
+  color: black;
+}
+
+.button,
+button,
+input[type='submit'],
+input[type='reset'],
+input[type='button'] {
+  display: inline-block;
+  height: 38px;
+  padding: 0 30px;
+  color: #555;
+  text-align: center;
+  font-size: 11px;
+  font-weight: 600;
+  line-height: 38px;
+  letter-spacing: 0.1rem;
+  text-transform: uppercase;
+  text-decoration: none;
+  white-space: nowrap;
+  background-color: transparent;
+  border-radius: 4px;
+  border: 1px solid #bbb;
+  cursor: pointer;
+  box-sizing: border-box;
+  color: black;
 }
