--- a/app/views/todo_lists/index.html.erb
+++ b/app/views/todo_lists/index.html.erb
@@ -10,19 +10,22 @@
           <%= l.description %>
         </div>
       </div>
-      <% l.tasks.each do |t| %>
-        <% if t.complete? %>
-          <strike style="opacity: 0.4;">Task Complete: <%= t.name %></strike>
-        <% else %>
-          <strong>Task: </strong><%= t.name %>
+      <div class="tasks">
+        <% l.tasks.each do |t| %>
+          <% if t.complete? %>
+            <strike style="opacity: 0.7;">Task Complete: <%= t.name %></strike> ||
+          <% else %>
+            <strong>TASK:  </strong> <%= t.name %>  ||
+          <% end %>
+          <%= link_to 'Edit Task', edit_task_path(:id => t.id), :class => "btn btn-dark"%>
+          <%= link_to 'Complete Task', {:controller => "tasks", :action => "complete", :id => t.id }, :class => "btn btn-dark", :method => 'post' %>
+          <br>
         <% end %>
-        <div>
-          <%= link_to 'Edit Task', edit_task_path(:id => t.id), :class => "btn btn-primary btn-sm" %> ||
-          <%= link_to 'Complete Task', {:controller => "tasks", :action => "complete", :id => t.id }, :class => "btn btn-primary btn-sm", :method => 'post' %>
-        </div>
-      <% end %>
-      <%= link_to 'Edit To-Do List', edit_todo_list_path(l), :class => 'btn btn-secondary btn-sm' %>
-      <%= link_to 'New Task', new_task_path(:list_id => l.id), :class => 'btn btn-secondary btn-sm' %>
-      <%= link_to 'Delete To-Do List', todo_lists_path(:list_id => l.id), :class => 'btn btn-secondary btn-sm', :method => 'delete' %>
+      </div>
+      <div class="bottom-buttons">
+        <%= link_to 'Edit To-Do List', edit_todo_list_path(l), :class => "btn btn-dark"%>
+        <%= link_to 'New Task', new_task_path(:list_id => l.id), :class => "btn btn-dark"%>
+        <%= link_to 'Delete To-Do List', todo_lists_path(:list_id => l.id), :class => "btn btn-dark", :method => 'delete' %>
+      </div>
     </div>
   <% end %>
