--- a/app/views/todo_lists/edit.html.erb
+++ b/app/views/todo_lists/edit.html.erb
@@ -1,3 +1,4 @@
+<%# Lets the user Edit their ToDo-list with the edit button %>
 <h1>Edit Todo-List </h1>
 <%= form_for @list do |f| %>
   <strong><%= f.label :title %></strong>
