--- a/app/views/todo_lists/new.html.erb
+++ b/app/views/todo_lists/new.html.erb
@@ -1,3 +1,4 @@
+<%# creates a New ToDo-list for the user %>
 <h1>New Todo-List</h1>
 <%= form_for @list do |f| %>
   <strong><%= f.label :title %></strong>
