--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,15 +8,13 @@
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
   <body>
+    <%# Particle.js is the fancy background %>
     <div id="particles-js"></div>
     <div class="container">
       <nav>
         <div class="nav-center"></div>
         <%= link_to 'To-Do Lists', root_path %>
-        <% if @current_user.present? %>
-          <% if @current_user.admin? %>
-            <%= link_to 'All Users', users_path %>
-          <% end %>
+        <% if @current_user.present? %> <!-- If the current user is present they will be able to link to a new ToDo-list -->
           <%= link_to 'New To-Do List', new_todo_list_path %>
           <%= link_to "Log out", login_path, :method => 'delete' %>
           <%= link_to @current_user.email %>
